--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -6,7 +6,7 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
 android:background="#e2a600"
-tools:context=".AuthActiv">
+tools:context=".AuthActivity">
 
 
 <TextView
@@ -47,10 +47,10 @@ tools:context=".AuthActiv">
     android:hint="Введите пароль" />
 
 <Button
-    android:id="@+id/button_reg_auth"
+    android:id="@+id/button_auth"
     android:layout_width="220dp"
     android:layout_height="wrap_content"
-    android:text="Автризоваться"
+    android:text="Войти"
     android:textStyle="bold"
     android:textSize="16sp"
     android:textColor="#fdfdfd"
@@ -59,14 +59,14 @@ tools:context=".AuthActiv">
     android:layout_marginTop="30dp"
     />
     <TextView
-        android:id="@+id/link_to_auth"
+        android:id="@+id/link_to_reg"
         android:layout_width="225dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
 
         android:layout_marginTop="120dp"
         android:fontFamily="@font/inter_bold"
-        android:text="Авторизоваться"
+        android:text="Зарегистрироваться"
         android:textColor="#fdfdfd"
         android:textSize="17sp"
         android:textStyle="bold" />
