--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="170dp"
         android:fontFamily="cursive"
-        android:text="Создайте аккаунт"
+        android:text="@string/create_on_account"
         android:textColor="#fdfdfd"
         android:textSize="25sp"
         android:textStyle="bold" />
@@ -30,7 +30,7 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:textColor="#fdfdfd"
-        android:hint="Введите логин" />
+        android:hint="@string/enter_login" />
 
     <EditText
         android:id="@+id/user_email"
@@ -42,7 +42,7 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:textColor="#fdfdfd"
-        android:hint="Введите email" />
+        android:hint="@string/enter_email" />
 
     <EditText
         android:id="@+id/user_pass"
@@ -54,13 +54,13 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:textColor="#fdfdfd"
-        android:hint="Введите пароль" />
+        android:hint="@string/enter_pass" />
 
     <Button
         android:id="@+id/button_reg"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:text="Регистрация"
+        android:text="@string/registration"
         android:textStyle="bold"
         android:textSize="16sp"
         android:textColor="#5e4502"
@@ -70,14 +70,13 @@
         />
 
     <TextView
-        android:id="@+id/link_to_reg"
+        android:id="@+id/link_to_auth"
         android:layout_width="225dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-
         android:layout_marginTop="120dp"
         android:fontFamily="@font/inter_bold"
-        android:text="Зарегистрироваться"
+        android:text="@string/login"
         android:textColor="#fdfdfd"
         android:textSize="17sp"
         android:textStyle="bold" />
