--- a/app/src/main/res/layout/activity_items.xml
+++ b/app/src/main/res/layout/activity_items.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#e2a600"
+    android:background="#9F8418"
     tools:context=".ItemsActivity">
     <TextView
         android:layout_width="225dp"
